Finished 'Final Details'

--- a/django.ipynb
+++ b/django.ipynb
@@ -649,6 +649,193 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step Detail View\n",
+    "`linebreaks` is a filter that turns two returns in a row into HTML paragraph tags.\n",
+    "\n",
+    "You apply filters to a variable with the pipe (`|`) character.\n",
+    "\n",
+    "#### Instructions:\n",
+    "* Add the following to /courses/views.py:\n",
+    "```python\n",
+    "def step_detail(request, course_pk, step_pk):\n",
+    "    step = get_object_or_404(Step, course_id=course_pk, pk=step_pk)\n",
+    "    return render(request, 'courses/step_detail.html', {'step': step})\n",
+    "```\n",
+    "* Add the following to urlpatterns list in courses/urls.py:\n",
+    "\n",
+    "```python\n",
+    "# Be sure to add this above course_detail, so that both the step pks, and the course pks are grabbed.\n",
+    "url(r'(?P<course_pk>\\d+)/(?P<step_pk>\\d+)/$', views.step_detail)\n",
+    "```\n",
+    "* Create a new template in courses/templates called step_detail.html, and enter the following:\n",
+    "\n",
+    "```html\n",
+    "{% extend 'layout.html' %}\n",
+    "\n",
+    "{% block title %}{{ step.title }} - {{ step.course.title }}{% endblock %}\n",
+    "\n",
+    "{% block content %}\n",
+    "<article>\n",
+    "    <h2>{{ step.course.title }}</h2>\n",
+    "    <h3>{{ step.title }}</h3>\n",
+    "    {{ step.content|linebreaks }}\n",
+    "</article>\n",
+    "{% endblock %}\n",
+    "```\n",
+    "*`linebreaks` is a filter that turns two returns in a row into HTML paragraph tags.*\n",
+    "\n",
+    "*You apply filters to a variable with the pipe (`|`) character.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Content Field\n",
+    "\n",
+    "#### Instructions:\n",
+    "* Inside courses/models.py add the following to the Step model:\n",
+    "```python\n",
+    "content = models.TextField()\n",
+    "```\n",
+    "* Create a migration for courses with `python manage.py makemigrations courses`\n",
+    "* You'll be presented with the following text:\n",
+    "```\n",
+    "You are trying to add a non-nullable field 'content' to step without a default; we can't do that (the database needs something to populate existing rows).\n",
+    "Please select a fix:\n",
+    " 1) Provide a one-off default now (will be set on all existing rows with a null value for this column)\n",
+    " 2) Quit, and let me add a default in models.py\n",
+    "Select an option:\n",
+    "```\n",
+    "* Enter 2, and press Enter\n",
+    "* Change content in Step model to `content = models.TextField(blank=True, default='')`\n",
+    "\n",
+    "*blank=True - A field can be blank (not filled in) in the admin and any other forms based on the model.*\n",
+    "\n",
+    "*default='something' - If no value is supplied for the field, the default 'something' will be put into the record.*\n",
+    "* Try doing the makemigration again, and then migrate it with `python manage.py migrate courses`\n",
+    "* Add some content to one of the Steps using Django Admin, and then check it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Code Challenge\n",
+    "Challenge Task 1 of 1\n",
+    "```python\n",
+    "We need to be able to associate a Writer with an Article. Add a ForeignKey field to the Article model to link it to the Writer model. Give the attribute the name writer. IMPORTANT Since our Article model comes first, you'll need to quote the Writer model in the foreign key. So use \"Writer\" instead of Writer.\n",
+    "\n",
+    "from django.db import models\n",
+    "\n",
+    "\n",
+    "class Article(models.Model):\n",
+    "    headline = models.CharField(max_length=255)\n",
+    "    publish_date = models.DateTimeField()\n",
+    "    content = models.TextField()\n",
+    "    writer = models.ForeignKey(\"Writer\")\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return self.headline\n",
+    "\n",
+    "\n",
+    "class Writer(models.Model):\n",
+    "    name = models.CharField(max_length=255)\n",
+    "    email = models.EmailField()\n",
+    "    bio = models.TextField()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## url Tag\n",
+    "{% url 'path.to.view' %} to link to a view who's URL doesn't have a name.\n",
+    "\n",
+    "__Note: This has been removed in Django 1.10 and beyond. If you want to use this feature, be sure to install Django 1.9 or below. You can do that with pip install django<1.10. Better yet, name all of your URLs as shown below.__\n",
+    "\n",
+    "url(r'pattern', views.view, name='list') to name an URL\n",
+    "\n",
+    "{% url 'list' %} to link to a named URL\n",
+    "\n",
+    "include('courses.urls', namespace='course') to namespace a group of URLs\n",
+    "\n",
+    "{% url 'courses:list' %} to link to a named and namespaced URL\n",
+    "\n",
+    "#### Instructions\n",
+    "* In learning_site/urls.py change the hello_world url to the following `url(r'^$', views.hello_world, name='hello_world')`\n",
+    "* In layout.html, add the following at the top of `div class='site-container'`:\n",
+    "```html\n",
+    "<nav>\n",
+    "    <a href=\"{% url 'hello_world' %}\">Home</a>\n",
+    "    <a href=\"{% url 'course_list' %}\">Courses</a>\n",
+    "</nav>\n",
+    "```\n",
+    "* Change the following in courses/urls.py:\n",
+    "\n",
+    "```python\n",
+    "urlpatterns = [\n",
+    "    url(r'^$', views.course_list, name='course_list'),\n",
+    "    url(r'(?P<course_pk>\\d+)/(?P<step_pk>\\d+)/$', views.step_detail, name='step'),\n",
+    "    url(r'(?P<pk>\\d+)/$', views.course_detail, name='detail'),\n",
+    "]\n",
+    "```\n",
+    "* Re-Render the page to see the new nav bar.\n",
+    "* Update course_list.html to the following:\n",
+    "\n",
+    "```html\n",
+    "{% extends \"layout.html\" %}\n",
+    "\n",
+    "{% block title %}Available Courses{% endblock %}\n",
+    "\n",
+    "{% block content %}\n",
+    "<div class='cards'>\n",
+    "    {% for course in courses %}\n",
+    "    <div class='card'>\n",
+    "        <header><a href=\"{% url 'detail' pk=course.pk %}\">{{ course.title }}</a></header>\n",
+    "        <div class='card-copy'>\n",
+    "            {{ course.description }}\n",
+    "        </div>\n",
+    "    </div>    \n",
+    "    {% endfor %}\n",
+    "</div>\n",
+    "{% endblock %}\n",
+    "```\n",
+    "* Go to the courses list page to see the courses with their hyperlinked names.\n",
+    "* In course_detail.html Change the following:\n",
+    "```html\n",
+    "<section>\n",
+    "        {% for step in course.step_set.all %}\n",
+    "        <h3>\n",
+    "            <a href=\"{% url 'step' course_pk=step.course.pk step_pk=step.pk %}\">{{ step.title }}</a>\n",
+    "        </h3>\n",
+    "        {{ step.description }}\n",
+    "    {% endfor %}\n",
+    "</section>\n",
+    "```\n",
+    "* Inside step_detail.html change the following:\n",
+    "```html\n",
+    "<article>\n",
+    "    <h2>\n",
+    "        <a href=\"{% url 'detail' pk=step.course.pk %}\">{{ step.course.title }}</a>\n",
+    "    </h2>\n",
+    "    <h3>{{ step.title }}</h3>\n",
+    "    {{ step.content|linebreaks }}\n",
+    "</article>\n",
+    "```\n",
+    "* Inside learning_site/urls.py add the namespace argument to courses url: `url(r'^courses/', include('courses.urls', namespace='courses'))`\n",
+    "*This a preventive method used to avoid name conflicts with urls from other apps (most likely created by other users)*\n",
+    "* In layout.html change the following: `<a href=\"{% url 'courses:course_list' %}\">Courses</a>`\n",
+    "* In course_list.html change the following: `<header><a href=\"{% url 'courses:detail' pk=course.pk %}\">{{ course.title }}</a></header>`\n",
+    "* In course_detail.html change the following: `<a href=\"{% url \"courses:step\" course_pk=step.course.pk step_pk=step.pk %}\">{{ step.title }}</a>`\n",
+    "* In step_detail.html change the following: `<a href=\"{% url 'course:detail' pk=step.course.pk %}\">{{ step.course.title }}</a>`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
