completed Django Basics

--- a/django.ipynb
+++ b/django.ipynb
@@ -836,6 +836,181 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Tests\n",
+    "`assertLess(a, b)` checks that a is less than b.\n",
+    "\n",
+    "`django.utils.timezone` is Django's timezone utility that takes the `TIME_ZONE` setting into account.\n",
+    "\n",
+    "`python manage.py test` runs all of the tests for your apps.\n",
+    "\n",
+    "#### Instructions:\n",
+    "* In /courses/test.py add the following:\n",
+    "\n",
+    "```python\n",
+    "from django.test import TestCase\n",
+    "from django.utils import timezone\n",
+    "\n",
+    "from .models import Course\n",
+    "\n",
+    "\n",
+    "class CourseModelTests(TestCase):\n",
+    "\n",
+    "    def test_course_creation(self):\n",
+    "        course = Course.objects.create(\n",
+    "            title=\"Python Regular Expressions\",\n",
+    "            description=\"Learn to write regular expressions in Python.\"\n",
+    "        )\n",
+    "        now = timezone.now()\n",
+    "        self.assertLess(course.created_at, now)\n",
+    "```\n",
+    "* Run the test by typing `python manage.py test` in the Terminal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Code Challenge\n",
+    "Now add a test that creates an instance of the Writer model and, using self.assertIn, make sure the email attribute is in the output of the mailto() method.\n",
+    "\n",
+    "```python\n",
+    "from django.test import TestCase\n",
+    "\n",
+    "from .models import Writer\n",
+    "\n",
+    "\n",
+    "class WriterModelTestCase(TestCase):\n",
+    "    '''Tests for the Writer model'''\n",
+    "    \n",
+    "    def test_writer_creation(self):\n",
+    "        writer = Writer.objects.create(\n",
+    "            name='Joe Smith',\n",
+    "            email='jsmith@example.com',\n",
+    "            bio='Joe is a writer'\n",
+    "        )\n",
+    "        \n",
+    "        self.assertIn(writer.email, writer.mailto())\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## View Tests\n",
+    "django.core.urlresolvers.reverse() takes a URL name and reverses it to the correct URL string. [More information](https://docs.djangoproject.com/en/1.8/ref/urlresolvers/#reverse)\n",
+    "\n",
+    "self.client acts like a web browser and lets you make requests to URLs, both inside and outside of your Django project.\n",
+    "\n",
+    "assertEqual(a, b) checks that a and b are equal to each other.\n",
+    "\n",
+    "assertIn(a, b) checks that a is contained in b.\n",
+    "\n",
+    "#### Instructions:\n",
+    "* In courses/tests.py update file to the following:\n",
+    "\n",
+    "```python\n",
+    "from django.core.urlresolvers import reverse\n",
+    "from django.test import TestCase\n",
+    "from django.utils import timezone\n",
+    "\n",
+    "from .models import Course, Step\n",
+    "\n",
+    "\n",
+    "class CourseModelTests(TestCase):\n",
+    "\n",
+    "    def test_course_creation(self):\n",
+    "        course = Course.objects.create(\n",
+    "            title=\"Python Regular Expressions\",\n",
+    "            description=\"Learn to write regular expressions in Python.\"\n",
+    "        )\n",
+    "        now = timezone.now()\n",
+    "        self.assertLess(course.created_at, now)\n",
+    "\n",
+    "\n",
+    "class StepModelTests(TestCase):\n",
+    "\n",
+    "    def setUp(self):\n",
+    "        self.course = Course.objects.create(\n",
+    "            title='Python Testing',\n",
+    "            description='Learn to write tests in Python.'\n",
+    "        )\n",
+    "\n",
+    "    def test_step_creation(self):\n",
+    "        step = Step.objects.create(\n",
+    "            title=\"Introduction to Doctests\",\n",
+    "            description=\"Learn to write docstrings\",\n",
+    "            course=self.course\n",
+    "        )\n",
+    "        self.assertIn(step, self.course.step_set.all())\n",
+    "\n",
+    "\n",
+    "class CourseViewsTests(TestCase):\n",
+    "    def setUp(self):\n",
+    "        self.course = Course.objects.create(\n",
+    "            title='Python Testing',\n",
+    "            description='A new course'\n",
+    "        )\n",
+    "        self.course2 = Course.objects.create(\n",
+    "            title='New Course',\n",
+    "            description='A new course'\n",
+    "        )\n",
+    "        self.step = Step.objects.create(\n",
+    "            title='Introduction to DocTests',\n",
+    "            description='Learn to write tests in your docstrings.',\n",
+    "            course=self.course\n",
+    "        )\n",
+    "\n",
+    "    def test_course_list_view(self):\n",
+    "        resp = self.client.get(reverse('courses:course_list'))\n",
+    "        self.assertEqual(resp.status_code, 200)\n",
+    "        self.assertIn(self.course, resp.context['courses'])\n",
+    "        self.assertIn(self.course2, resp.context['courses'])\n",
+    "\n",
+    "```\n",
+    "*FYI: Urls are tested while testing views, because in order to get to the view, a url must be used.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Template Tests\n",
+    "`assertTemplateUsed(response, 'template/name.html')` checks that a given template is used somewhere in the response of the view.\n",
+    "\n",
+    "`assertContains(response, 'string')` checks that a given string is somewhere in the text of a response.\n",
+    "\n",
+    "#### Instructions:\n",
+    "* Add the following to the bottom courses/tests.py:\n",
+    "\n",
+    "```python\n",
+    "    def test_course_detail_view(self):\n",
+    "        resp = self.client.get(reverse('courses:detail',\n",
+    "                               kwargs={'pk': self.course2.pk}))\n",
+    "        self.assertEqual(resp.status_code, 200)\n",
+    "        self.assertEqual(self.course2, resp.context['course'])\n",
+    "        self.assertNotEqual(self.course, resp.context['course'])\n",
+    "\n",
+    "    def test_step_detail_view(self):\n",
+    "        resp = self.client.get(reverse('courses:step', kwargs={\n",
+    "                    'course_pk': self.course2.pk,\n",
+    "                    'step_pk': self.step2.pk}))\n",
+    "        self.assertEqual(resp.status_code, 200)\n",
+    "        self.assertEqual(self.step2, resp.context['step'])\n",
+    "        self.assertNotEqual(self.step, resp.context['step'])\n",
+    "```\n",
+    "* Add the following to the bottom of test_course_list_view:\n",
+    "\n",
+    "```python\n",
+    "self.assertTemplateUsed(resp, 'courses/course_list.html')\n",
+    "self.assertContains(resp, self.course.title)\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
